--- a/CourseMate/Views/Shared/_SidebarPartial.cshtml
+++ b/CourseMate/Views/Shared/_SidebarPartial.cshtml
@@ -134,7 +134,7 @@
 
         </li>
         <li>
-            <a href="@Url.Action("MyPosts", "Home")" class="@(match("Home", "MyPosts") ? "active" : "")">
+            <a href="@Url.Action("MyPosts", "Post")" class="@(match("Post", "MyPosts") ? "active" : "")">
                 <i class="fas fa-list"></i> <span>My Posts</span>
             </a>
         </li>
