--- a/CourseMate/Views/Home/Index.cshtml
+++ b/CourseMate/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@if (User.Identity.IsAuthenticated)
+@* @if (User.Identity.IsAuthenticated)
 {
     <div class="text-center my-5">
         <h1 class="display-4 fw-bold mb-4">Welcome, @User.Identity.Name!</h1>
@@ -18,7 +18,7 @@ else
         <p class="lead mb-5">Learn about building web apps with ASP.NET Core.</p>
         <a asp-controller="Home" asp-action="Privacy" class="btn btn-primary btn-lg px-4">Get Started</a>
     </div>
-}
+} *@
 
 <h2>Recent Posts</h2>
 
