--- a/CourseMate/Views/Shared/_Layout.cshtml
+++ b/CourseMate/Views/Shared/_Layout.cshtml
@@ -67,6 +67,7 @@
             justify-content: flex-end;
             align-items: center;
             transition: margin-left 0.3s ease;
+            height: 56px;
         }
 
         .sidebar.collapsed ~ .navbar {
@@ -91,7 +92,7 @@
 
         .main-content {
             margin-left: 250px;
-            padding: 100px 20px 40px;
+            padding: 120px 20px 40px;
             width: calc(100% - 250px);
             display: flex;
             justify-content: center;
