--- a/CourseMate/Views/Shared/_SidebarPartial.cshtml
+++ b/CourseMate/Views/Shared/_SidebarPartial.cshtml
@@ -39,12 +39,14 @@
         box-sizing: border-box;
         overflow-y: auto;
         transition: width 0.3s ease;
+        padding: 20px 10px 10px;
     }
        
         .sidebar.collapsed {
             width: 70px;
         }
-    
+
+
     .sidebar-menu {
         list-style: none;
         padding: 0;
