--- a/CourseMate/Views/Home/Index.cshtml
+++ b/CourseMate/Views/Home/Index.cshtml
@@ -22,7 +22,11 @@
             <div class="posts-list">
                 @foreach (var post in Model)
                 {
-                    <partial name="_PostCard" model="post" />
+                    @if (post.Status == PostStatus.accepted)
+                    {
+                        <partial name="_PostCard" model="post" />
+                    }
+
                 }
             </div>
         }
